demos/argo-rollouts/blue-green/bluegreen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo
  namespace: demos-argo-rollouts-bluegreen
spec:
  ingressClassName: nginx
  rules:
  - host: blue-green.dev.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo
            port:
              name: http
